manifests/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lgtm
---
apiVersion: v1
kind: Namespace
metadata:
  name: app
